tests/invalid/open_invalid_arg_type/main.py
def run_case() -> None:
    open(1)

if __name__ == "__main__":
    run_case()
